--- a/Code/PinWindows/MainWindow.xaml
+++ b/Code/PinWindows/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:PinWindows" x:Class="PinWindows.MainWindow"
-        Title="Pin Windows" Height="350" Width="525" WindowStartupLocation="CenterScreen" SizeToContent="WidthAndHeight" ResizeMode="CanMinimize">
+        Title="Pin Windows" Height="468" Width="582" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Window.DataContext>
         <local:ViewModel/>
     </Window.DataContext>
